移動cors設定到合理的位置